fixed a responsive issue that makes the contact-form bleed out of mobile page

--- a/src/components/contact-form/contact-form.scss
+++ b/src/components/contact-form/contact-form.scss
@@ -21,7 +21,7 @@
         justify-content: center;
         align-items: center;
         border-radius: 25px;
-        width: 450px;
+        width: 400px;
 
 
         .text-area {
